<resources>
    <string name="app_name">Medical</string>
    <string name="login">Login</string>
    <string name="doctor_login">Doctor Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="description"> </string>
    <string name="home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="patient_name">Patient Name</string>
    <string name="status_discharge">Status: Discharge</string>
    <string name="condition_critical">Condition: Critical</string>
    <string name="disease_dummy_data">Disease: Dummy Data</string>
    <string name="admit_date_12_12_12">Admit Date: 12/12/12</string>
    <string name="name">Name</string>
    <string name="disease">Disease</string>
    <string name="condition">Condition</string>
    <string name="add_patient">Add Patient</string>
    <string name="create_patient">Create Patient</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="discharge">Discharge</string>
    <string name="go_back">Go Back</string>
    <string name="temp_91f">Temp: 91F</string>
    <string name="heart_rate_62ppm">Heart Rate: 62ppm</string>
    <string name="humidity_70">Humidity: 70%</string>
    <string name="server_url">Server URL</string>
    <string name="you_must_have_to_restart_your_application_to_propagate_it_according_to_the_new_url">You must have to restart your application to propagate it according to the new URL.</string>
    <string name="title_activity_devices_list">DevicesListActivity</string>
    <string name="patient_devices">Patient Devices</string>
    <string name="set_device">Set Device</string>
</resources>
