<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/patientName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/patient_name"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/patientStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider_placeHolder"
                android:text="@string/status_discharge" />

            <TextView
                android:id="@+id/patientCondition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/patientStatus"
                android:text="@string/condition_critical" />

            <TextView
                android:id="@+id/patientDisease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/patientCondition"
                android:text="@string/disease_dummy_data" />

            <TextView
                android:id="@+id/patientAdmitDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/patientDisease"
                android:text="@string/admit_date_12_12_12" />

            <View
                android:id="@+id/divider_placeHolder"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@+id/patientName"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/primary_text" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>